added services section

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <p style="text-indent: 6%;">
                 We're Gournadi Photography Society. Actually, We're facebook based Photographic society.
                 We have a facebook group & a page for peoples. So that, they can share their
-                beautifull capture freely from our platform. That's it.
+                beautifull capture freely from our platform. We provide <strong>Paid</strong> services on Wedding & Modelling Photography. That's it.
             </p>
         </div>
 
@@ -65,7 +65,7 @@
         <hr>
     </div>
     <!-- Header -->
-    <header class="header">
+    <header class="header" id="gallery">
         <h1 style="color: #eeaaaa;">Our Gallery</h1>
     </header>
 
@@ -116,9 +116,58 @@
         </section>
     </main>
     
-    <div class="servicec-container">
+    <!-- services section start -->
+    <section class="services-container" id="services">
         <h1 style="color: #eeaaaa;">Our Services</h1>
-    </div>
+        <div class="service-grid-parent">
+            <!-- service one -->
+            <div class="services-type">
+                <div class="service-img">
+                    <img src="images/service-wedding.jpg" alt="">
+                </div>
+                <div class="service-text">
+                    <h4>Our Wedding Service</h4>
+                    <p>
+                        You can get us for Wedding Photography. This is our <strong>Paid</strong> Service.
+                        If you want this service
+                    </p>
+                    <a href="#">Click Here</a>
+                </div>
+            </div>
+
+            <!-- service two -->
+            <div class="services-type">
+                <div class="service-img">
+                    <img src="images/service-model.jpg" alt="">
+                </div>
+                <div class="service-text">
+                    <h4>Our Modelling Service</h4>
+                    <p>
+                        You can get us for Modelling Photography. This is our <strong>Paid</strong> Service.
+                        If you want this service
+                    </p>
+                    <a href="#">Click Here</a>
+                </div>
+            </div>
+
+            <!-- service three -->
+            <div class="services-type">
+                <div class="service-img">
+                    <img src="images/service-img.jpg" alt="">
+                </div>
+                <div class="service-text">
+                    <h4>Our Something Service</h4>
+                    <p>
+                        You can get us for Something Photography. This is our <strong>Paid</strong> Service.
+                        If you want this service
+                    </p>
+                    <a href="#">Click Here</a>
+                </div>
+            </div>
+            
+        </div>
+    </section>
+
 
 
 
