added our team section

--- a/index.html
+++ b/index.html
@@ -168,11 +168,55 @@
         </div>
     </section>
 
+    <section class="our-team-container" id="contact">
+        <h1>Our Team</h1>
+        <div class="team-section">
+            <!-- first team person -->
+            <div class="teams-flex team1">
+                <div class="team-first-person-img">
 
+                </div>
+                <div class="person-intro">
+                    <h3>intro</h3>
+                    <P>Hi, I am Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, sapiente.</P>
+                </div>
+                <div class="person-visit-link">
+                    <a href="#rabby">Visit me</a>
+                </div>
+            </div>
+            
+            <!-- second team person -->
+            <div class="teams-flex team2">
+                <div class="team-first-person-img">
 
+                </div>
+                <div class="person-intro">
+                    <h3>intro</h3>
+                    <P>Hi, I am Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, sapiente.</P>
+                </div>
+                <div class="person-visit-link">
+                    <a href="#rabby">Visit me</a>
+                </div>
+            </div>
 
+            <!-- third team person -->
+            <div class="teams-flex team3">
+                <div class="team-first-person-img">
+                    <img src="" alt="">
 
-
+                </div>
+                <div class="person-intro">
+                    <h3>intro</h3>
+                    <P>Hi, I am Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, sapiente.</P>
+                </div>
+                <div class="person-visit-link">
+                    <a href="#rabby">Visit me</a>
+                </div>
+            </div>
+        </div>
+        </section>
+            
+    </div>
 
 
 
