--- a/index.html
+++ b/index.html
@@ -174,43 +174,47 @@
             <!-- first team person -->
             <div class="teams-flex team1">
                 <div class="team-first-person-img">
-
+                    <img src="images/rabby.jpg" alt="">
                 </div>
                 <div class="person-intro">
+                    <a href="https://web.facebook.com/engrrabby.ahmed" target="_blank">Rabby Ahmed</a>
                     <h3>intro</h3>
                     <P>Hi, I am Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, sapiente.</P>
                 </div>
                 <div class="person-visit-link">
-                    <a href="#rabby">Visit me</a>
+                    <a href="https://web.facebook.com/engrrabby.ahmed" target="_blank">Visit me</a>
                 </div>
             </div>
             
             <!-- second team person -->
             <div class="teams-flex team2">
                 <div class="team-first-person-img">
-
+                    <img src="images/peal.jpg" alt="">
                 </div>
+
                 <div class="person-intro">
+                    <a href="https://web.facebook.com/muhid.hossain.18" target="_blank">Abdul Muhit</a>
                     <h3>intro</h3>
                     <P>Hi, I am Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, sapiente.</P>
                 </div>
                 <div class="person-visit-link">
-                    <a href="#rabby">Visit me</a>
+                    <a href="https://web.facebook.com/muhid.hossain.18" target="_blank">Visit me</a>
                 </div>
             </div>
 
             <!-- third team person -->
             <div class="teams-flex team3">
                 <div class="team-first-person-img">
-                    <img src="" alt="">
+                    <img src="images/mk.jpg" alt="">
 
                 </div>
                 <div class="person-intro">
+                    <a href="https://web.facebook.com/mk.roman.1" target="_blank">Mk Roman</a>
                     <h3>intro</h3>
                     <P>Hi, I am Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus, sapiente.</P>
                 </div>
                 <div class="person-visit-link">
-                    <a href="#rabby">Visit me</a>
+                    <a href="https://web.facebook.com/mk.roman.1" target="_blank">Visit me</a>
                 </div>
             </div>
         </div>
@@ -218,7 +222,45 @@
             
     </div>
 
+    <footer class="footer-container">
+        <div class="footer-flex-section">
+            <div class="footer first-footer">
+                <ul>
+                    <li><a href="#">Explore</a></li>
+                    <li><a href="#">More about us</a></li>
+                    <li><a href="#">Join us today</a></li>
+                    <li><a href="#">Visit on</a></li>
+                </ul>
+            </div>
+            <div class="footer first-footer">
+                <ul>
+                    <li><a href="#">See all services</a></li>
+                    <li><a href="#">Explore all</a></li>
+                    <li><a href="#">Subscribe</a></li>
+                    <li><a href="#">Group activity</a></li>
+                </ul>
+            </div>
+            <div class="footer first-footer">
+                <h3 class="icon-title">Follow Us</h3>
+                <ul class="icon-list">
+                    <li><a href="https://web.facebook.com/groups/396732861106560"><i class="fa-brands fa-facebook"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-instagram-square"></i></a></li>
+                    <li><a href="#"><i class="fa-brands fa-twitter-square"></i></a></li>
+                </ul>
+            </div>
+        </div>
 
+        <div class="copyright-footer">
+            <div class="copyright">
+                <p>All rights reserved. 2018-2022©Gournadi Photographic Society.</p>
+            </div>
+        </div>
+
+        <div class="dev-contact">
+            <h3 class="footer-dev-title">Contact Developer</h3>
+            <a href="">Gmail</a>
+        </div>
+    </footer>
 
 
     <script src="script.js"></script>
