--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@
 
         <div class="dev-contact">
             <h3 class="footer-dev-title">Contact Developer</h3>
-            <a href="">Gmail</a>
+            <a href="#">Gmail</a>
         </div>
     </footer>
 
